@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-21T08:15:34Z",
-  "count_outdated" : 404,
-  "uniques_outdated" : 219,
-  "count" : 427,
+  "timestamp" : "2022-07-21T16:16:12Z",
+  "count_outdated" : 406,
+  "uniques_outdated" : 220,
+  "count" : 429,
   "uniques" : 232,
   "clones" : [
-    {
-      "timestamp": "2022-07-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 2,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-07-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
