@@ -1,3 +1,10 @@
+2022-07-21T16:16:12Z:
+* notice: last 14d: unq all: 3 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 219 404 / 232 427
+* notice: next accum: outdated-unq outdated-all / unq all: 220 406 / 232 429
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-07-07] / [2022-07-21]
+
 2022-07-21T08:15:34Z:
 * notice: last 14d: unq all: 3 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 219 404 / 231 427
